fixed pagination items on mobile screen

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -37,13 +37,6 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  -webkit-tap-highlight-color: transparent;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
 }
 
 a {
@@ -444,5 +437,13 @@ footer h3 span {
 }
 
 .bodyLock {
-  overflow: hidden;
+  width: 100%;
+  position: fixed;
+  min-height: 100vh;
+}
+
+@media (max-width: 600px) {
+  .hideForMobile {
+    display: none;
+  }
 }
